package com.tp.decorator;
/**
 *   @Author Grioui Ayoub
 */
public interface Assurance {
    int cost();
}
