@startuml
!theme vibrant
interface Assurance{
    int cost()
}
abstract AssuranceDecorator{
    Assurance assurance
    int cost()
}
class ResponsabilteCivile{
    int cost()
}
class DommageEtCollision{
    int cost()
}
class Incendie{
    int cost()
}
class Vol{
    int cost()
}
class Inondation{
    int cost()
}
Assurance <.. ResponsabilteCivile
Assurance <.. AssuranceDecorator
AssuranceDecorator o-- Assurance
AssuranceDecorator <|-- Inondation
AssuranceDecorator <|-- DommageEtCollision
AssuranceDecorator <|-- Incendie
AssuranceDecorator <|-- Vol
@enduml